2004-12-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-gnome.scm (text): Hello world, again.

	* scm/output-svg.scm (named-glyph): New function.  Hello world!

	* lily/modified-font-metric.cc (index_to_charcode): New method.

	* lily/include/font-metric.hh (index_to_charcode): New function.

	* lily/font-metric.cc (ly:font-glyph-name-to-charcode): Use it in
	new function.
	(ly:font-glyph-to-index): Remove.

2004-12-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/open-type-font.cc (make_index_to_charcode_map): new method.

	* mf/feta-autometric.mf (code): remove tex name from fet_beginchar.

	* lily/open-type-font.cc (load_scheme_table): new function

	* lily/dots.cc (print): replace - 

	* lily/open-type-font.cc (attachment_point): new function.
	(load_table): read LILC table

	* buildscripts/gen-bigcheese-scripts.py (Module): new
	file. Generate FF scripts.

	* mf/feta-din10.mf: idem.

	* mf/feta-nummer10.mf: remove mf files.

	* mf/feta-alphabet.mf (dynamic_design_size): merge din and number font.

2004-12-12  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/lily-guile.cc: Use scm_from_locale_stringn.

	* lily/include/guile-compatibility.hh (scm_from_locale_stringn): Add
	compatibility.

2004-12-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/open-type-font.cc (get_indexed_char): scale metrics by
	design-size and units_per_EM.

	* mf/bigcheese.pe.in: set PUA codepoints before loading din & nummer.

2004-12-12  Jan Nieuwenhuizen  <janneke@gnu.org>

	* mf/bigcheese.pe.in (i): Map to 0xe000 (PUA) for testing, which
	does not crash fontforge.

	* scm/lily-library.scm (char->unicode-index): Hack to map onto
	PUA.

2004-12-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/framework-ps.scm (ps-embed-cff): new function.

	* lily/lily-guile.cc (LY_DEFINE): make ly:gulp-file binary proof.

2004-12-12  Werner Lemberg  <wl@gnu.org>

	* mf/bigcheese.pe.in: Add PUA mapping.
	Don't create Type 42 but bare CFF font.

2004-12-12  Jan Nieuwenhuizen  <janneke@gnu.org>
